--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">AppOOP</string>
+    <string name="name">Name</string>
+    <string name="m2">m2</string>
+    <string name="coltura">coltura</string>
+    <string name="varieta">varieta</string>
+    <string name="_0">0</string>
+    <string name="_00_00_00">00/00/00</string>
+    <string name="info_entrata">10.5</string>
+    <string name="info_uscita">6.3</string>
+    <string name="ec">2.1</string>
+    <string name="h">H</string>
+    <string name="button">Button</string>
 </resources>
